--- a/source/style.css
+++ b/source/style.css
@@ -25,7 +25,7 @@ h4 {
 }
 
 .card-body {
-  padding: 50px;
+  padding: 10px 20px;
 }
 
 .top-section .input-city {
@@ -43,10 +43,7 @@ h4 {
 }
 
 .middle-section {
-  margin: 40px auto;
-}
-
-.middle-section .left-side h3 {
+  margin: 40px auto 30px auto;
 }
 
 .middle-section .displayed-location-with-icon h1 {
@@ -101,22 +98,26 @@ h4 {
 }
 
 .bottom-section {
-  margin: 50px auto 30px auto;
+  margin: 20px auto;
   text-align: center;
 }
 
+.bottom-section .forecast-min-and-max-temperature {
+  margin: 0 auto;
+}
+
+.forecast-weather-0,
 .forecast-weather-1,
 .forecast-weather-2,
 .forecast-weather-3,
 .forecast-weather-4,
-.forecast-weather-5,
-.forecast-weather-6 {
-  margin: 15px auto;
+.forecast-weather-5 {
+  margin: 0 auto;
 }
 
 .find-current-location {
   text-align: center;
-  margin-top: 0;
+  margin-top: 30px;
 }
 
 .find-current-location h2 {
@@ -143,7 +144,7 @@ h4 {
 }
 
 footer {
-  margin-bottom: 40px;
+  margin: 40px auto;
   text-align: center;
 }
 
