--- a/source/style.css
+++ b/source/style.css
@@ -102,7 +102,9 @@ h4 {
   text-align: center;
 }
 
-.bottom-section .forecast-min-and-max-temperature {
+.bottom-section .forecast-min-and-max-celsius-temperature,
+.bottom-section .forecast-min-and-max-fahrenheit-temperature {
+  padding: 0;
   margin: 0 auto;
 }
 
@@ -113,6 +115,24 @@ h4 {
 .forecast-weather-4,
 .forecast-weather-5 {
   margin: 0 auto;
+}
+
+.forecast-min-temperature-0,
+.forecast-min-temperature-1,
+.forecast-min-temperature-2,
+.forecast-min-temperature-3,
+.forecast-min-temperature-4,
+.forecast-min-temperature-5 {
+  text-align: right;
+}
+
+.forecast-max-temperature-0,
+.forecast-max-temperature-1,
+.forecast-max-temperature-2,
+.forecast-max-temperature-3,
+.forecast-max-temperature-4,
+.forecast-max-temperature-5 {
+  text-align: left;
 }
 
 .find-current-location {
